--- a/lab-inferential_statistics.ipynb
+++ b/lab-inferential_statistics.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "bebb86ea-f691-477e-a993-8df0b205b60f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Lab | Inferential statistics - T-test & P-value\n",
     "\n",
@@ -16,7 +18,7 @@
     "\n",
     "Note: The following lab is divided in 2 sections which represent activities 3 and 4.\n",
     "\n",
-    "### [Part 1](#Part-1)\n",
+    "### [Part 1](#Part-1!)\n",
     "In this activity, we will look at another example. Your task is to understand the problem and write down all the steps to set up ANOVA. After the next lesson, we will ask you to solve this problem using Python. Here are the steps that you would need to work on: - Null hypothesis - Alternate hypothesis - Level of significance - Test statistic - P-value - F table\n",
     "\n",
     "**Context**\n",
@@ -28,7 +30,7 @@
     "- What are the degrees of freedom of model, error terms, and total DoF\n",
     "- Data was collected randomly and provided to you in the table as shown: link to the image - Data\n",
     "\n",
-    "### Part 2\n",
+    "### [Part 2](#Part-2!)\n",
     "- In this section, use the Python to conduct ANOVA.\n",
     "- What conclusions can you draw from the experiment and why?"
    ]
@@ -314,7 +316,9 @@
   {
    "cell_type": "markdown",
    "id": "af1b52a2-b048-465c-8508-2fb0dd257b45",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Matched Pairs Test"
    ]
@@ -655,7 +659,9 @@
   {
    "cell_type": "markdown",
    "id": "1c5b06b2-40be-4d0f-be2a-cedd3df27e70",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# OPTIONAL PART | Inferential statistics - ANOVA"
    ]
@@ -665,7 +671,7 @@
    "id": "2159a904-2e96-4caa-876e-b9623afbbac5",
    "metadata": {},
    "source": [
-    "## Part 1"
+    "## Part 1!"
    ]
   },
   {
@@ -699,10 +705,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94dc0f76-43c5-4d94-b5a3-ec6aa3e5fea8",
+   "metadata": {},
+   "source": [
+    "## Part 2!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "id": "8e443e08-ebad-488a-8064-b1bc5bb5002e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "lab_data = pd.read_excel('files_for_lab/anova_lab_data.xlsx')"
